# rpg-maker-tools

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  custom_placeholder_rules.json  launch_tui.bat  main.py  pyproject.toml  run.bat  setting.example.toml  setting.toml
app/: __init__.py  cli.py  language.py  language_profiles.py  llm_request_body_extra.py  native_quality.py
app/agent_toolkit/: __init__.py  placeholder_scan.py  reports.py  service.py
app/application/: __init__.py  file_writer.py  font_replacement.py  handler.py  runtime.py  summaries.py
app/cli/: __init__.py  arguments.py  dispatch.py  errors.py  parser.py  progress.py  reports.py  runtime.py
app/config/: __init__.py  custom_placeholder_rules.py  environment.py  loaders.py  overrides.py  schemas.py
app/core/: di.py  game_data_manager.py  handler.py
app/database/: __init__.py  db.py  sql.py
app/event_command_text/: __init__.py  exporter.py  extraction.py  importer.py
app/extraction/: __init__.py  data_text_extraction.py  glossary_extraction.py  plugin_text_extraction.py
app/japanese_residual/: __init__.py  rules.py
app/llm/: __init__.py  base.py  errors.py  handler.py  schemas.py  utils.py
app/models/: game_data.py  loaders.py  schemas.py
app/name_context/: __init__.py  extraction.py  files.py  prompt.py  schemas.py  write_back.py
app/note_tag_text/: __init__.py  exporter.py  extraction.py  importer.py  parser.py  sources.py
app/observability/: __init__.py  logging.py
app/persistence/: __init__.py  font_records.py  repository.py  rows.py  rule_records.py  run_records.py  session_base.py  session_utils.py  sql.py  terminology_records.py  translation_records.py
app/plugin_text/: __init__.py  analysis.py  common.py  exporter.py  extraction.py  importer.py  paths.py  write_back.py
app/rmmz/: __init__.py  commands.py  control_codes.py  engine.py  extraction.py  game_data.py  json_types.py  loader.py  placeholder_guard.py  probe.py  schema.py  speaker.py  text_protocol.py  text_rules.py  write_back.py
app/source_residual/: __init__.py  rules.py
app/terminology/: __init__.py  extraction.py  files.py  prompt.py  schemas.py  write_back.py
app/translation/: __init__.py  batch.py  cache.py  context.py  glossary_translation.py  line_wrap.py  retry.py  text_structure.py  text_translation.py  verify.py
app/tui/: __init__.py  app.py  styles.tcss
app/utils/: __init__.py  command_utils.py  config_loader_utils.py  database_utils.py  game_loader_utils.py  japanese_utils.py  log_utils.py  probe_utils.py  source_language_utils.py
app/write_back/: data_text_write_back.py  glossary_write_back.py  plugin_text_write_back.py
cli/: app.py
crates/att-mz-cli/: Cargo.toml
crates/att-mz-cli/src/: main.rs
crates/att-mz-core/: Cargo.toml
crates/att-mz-core/src/: config.rs  db.rs  doctor.rs  error.rs  event_command_rules.rs  font_replacement.rs  game.rs  japanese_residual_rules.rs  lib.rs  native_core.rs  note_tag_rules.rs  placeholder.rs  placeholder_scan.rs  plugin_rules.rs  report.rs  rmmz.rs  terminology.rs  translate.rs  translation_state.rs  workspace.rs  write_back.rs
docs/: advanced-usage.md  agent-user-guide.md  agent-workflow.md  cli-project-usage.md  core-module-guide.md  custom-placeholder-rules.md  database-wiki.md  event-command-rules-agent-prompt.md  module-diagrams.md  name-context-agent-prompt.md  plugin-rules-agent-prompt.md  refactor-split-matrix.md  release-readme.md  terminology-glossary-handoff.md
prompts/: error_retry_system.txt  glossary_display_name_system.txt  glossary_role_name_normalize_system.txt  glossary_role_name_system.txt  plugin_text_analysis_system.txt  text_translation_en_to_zh_system.md  text_translation_system.md  text_translation_system.txt
rust_app/: lib.rs  native_core.rs
scripts/: build_release.py
tests/: conftest.py  test_agent_toolkit.py  test_cli.py  test_cli_json_output.py  test_config_loaders.py  test_config_overrides.py  test_docs.py  test_event_command_text.py  test_export_translation_task_blocks.py  test_glossary_streaming.py  test_llm_retry.py  test_loaders_probe.py  test_log_utils.py  test_main_cli.py  test_name_context.py  test_observability.py  test_persistence.py  test_plugin_command_357.py  test_plugin_text.py  test_plugin_text_extraction.py  test_rmmz_loader_extraction_writeback.py  test_script_logging.py  test_skill_protocol.py  test_terminology.py  test_text_protocol.py  test_text_rules.py  test_translation_cache_context.py  test_translation_db_and_handler.py  test_translation_line_alignment.py
xtask/: Cargo.toml
(+75 files in other folders)
