[package]
name = "att-mz-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "_native"
path = "rust_app/lib.rs"
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.16"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rayon = "1.11"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
