[project]
name = "rpg-maker-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "demjson3>=3.0.6",
    "google-genai>=1.66.0",
    "json-repair>=0.58.5",
    "loguru>=0.7.3",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "volcengine-python-sdk[ark]>=5.0.13",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.basedpyright]
include = [
    "app",
    "main.py",
    "tests",
]
exclude = [
    ".venv",
    "__pycache__",
]
pythonVersion = "3.14"
stubPath = "typings"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".",
]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning:google.genai.types",
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater.:UserWarning:volcenginesdkarkruntime._compat",
]
